chore: optimize design